--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-@@ -1,19 +1,19 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
@@ -17,7 +16,7 @@
         <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO</h1>
             <p>#homem-aranha</p>
-@@ -27,6 +27,27 @@ <h1>ATRAVÉS DO ARANHAVERSO</h1>
+ <h1>ATRAVÉS DO ARANHAVERSO</h1>
         </div>
     </section>
 
