--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
         <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO</h1>
             <p>#homem-aranha</p>
- <h1>ATRAVÉS DO ARANHAVERSO</h1>
+        </div> 
         </div>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dEbe0rS4Z2A?si=DJIKZuu1zQYfeyUj"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+       </div>
     </section>
 
     <section class="categoria">
